<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="query">query</string>
    <string name="stickerset_id">StickerSet ID</string>
    <string name="basics">Basics</string>
    <string name="token">Token</string>
    <string name="telegram_bot_api_authentication">Telegram Bot API Authentication</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="delete">delete</string>
    <string name="stickerset">StickerSet</string>
    <string name="version_0_1_0">Version: 0.1.0</string>
    <string name="made_with_by_rain">Made with ❤, by Rain</string>
    <string name="github_repository">GitHub Repository</string>
</resources>