<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:fitsSystemWindows="true"
        app:title="About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:src="@mipmap/ic_launcher_round"
                android:scaleType="centerCrop"
                app:shapeAppearance="@style/CardStyle"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <TextView
                android:text="@string/stickerset"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_version"
                android:text="@string/version_0_1_0"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/made_with_by_rain"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_github"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_baseline_link_24"
                android:layout_width="36dp"
                android:layout_height="36dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/github_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>